# SQSConsumer

./: README.md  pyproject.toml
sqs_consumer/: __init__.py
src/sqs_consumer/: __init__.py  abstract_consumer.py  requirements.txt
