[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqs_consumer"
version = "0.0.26"
authors = [
  { name="Roland Crompton", email="" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.36.7",
  "python-dotenv>=1.0.1",
    "Flask>=3.1.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
packages = ["src/sqs_consumer"]


[project.urls]
Homepage = "https://github.com/RoAsCro/SQSConsumer.git"